client/src/app/play/play.component.scss
:host {
  display: flex;
  flex-direction: row;
}

.game {
  display: flex;
  flex-direction: row;
  flex: 1;
  min-width: 600px;

  .status {
    color: white;
    font-size: 72px;
    text-align: center;
    height: 60px;
    margin-top: 28px;
  }
}

.circle {
  flex: 1;
  height: 90vh;
  position: relative;
  border-radius: 50%;
  margin-right: 4em;
}

.player {
  position: absolute;
  flex-direction: column;
  display: flex;

  .player-name {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 250px;
    height: 50px;
    background: black;
    color: papayawhip;
    text-align: center;
  }
}

.cards {
  display: flex;
  justify-content: center;
}

.card {

  :not(.magnified) {
    &:hover {
      transform: scale(2);
      transition: transform 0.2s ease;
      cursor: pointer;
    }
  }

  img {
    height: 48px;
    width: 48px;
  }
}

.highlight {
  border: yellow 1px solid;
}

.magnified {
  transform: scale(12);
  transition: transform 0.2s ease;
  cursor: pointer;
  position: fixed;
  top: 50%;
  left: 50%;
}

.role {
  margin-right: 16px;
}

.visible-cards {
  display: flex;
  flex-direction: column;
  min-width: 400px;
  margin: 48px 0;

  .visible-cards-round {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 8px;
  }
}

.end-container {
  display: flex;
  flex-direction: column;
  position: absolute;
  align-items: center;

  button {
    margin-top: 50px;
  }
}

.ending {
  font-size: 100px;
  color: white;
}

.state {
  font-size: 20px;
  color: white;
  display: flex;
  flex-direction: column;
}

